test/parsing/vass/wrong-unended-string-1.good
wrong-unended-string-1.chpl:2: EOF in string
wrong-unended-string-1.chpl:2: syntax error
